mejoras para juntar con quasar